Improve responsiveness and fix auth
- Improve the responsiveness of the interface to prevent features from being cut off on smaller screens.
- Fix the firebase sign up error.
- Enable sign-in via Google.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
+
 #root {
+  width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  #root {
+    padding: 0;
+  }
+}
+
+@media (min-width: 769px) {
+  #root {
+    padding: 1rem;
+  }
 }
 
 .logo {
